# wmr

./: Alarm.md  C2000CP1controlling4LineRU.md  Cacti.md  Compile.md  INSTALL  Install.md  Logrotate.md  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.linux.i686  Munin.md  ProjectHome.md  RRDCreateImg.md  SQLite.md  Use.md  WMRAboutRU.md  WMRCactiRU.md  WMRConfigFile.md  WMRMuninRU.md  WMRSupportHardware.md  WMRUsageRU.md  WMRdebugScreenshot.md  WhatisWMR.md  config.h  configure  configure.ac  toDen.readme.32bit  toDen.readme.64bit  wmr.conf  wmr.h  wmr_rrdtool.h
branches/wmr-oregon-0.4-ac-migration/: Makefile  Makefile.in  README.ru.txt  config.h  config.h.in  configure  configure.ac
branches/wmr-oregon-0.4-ac-migration/contrib/: wmr-oregon.txt  wmr.conf  wmr.init.openwrt
branches/wmr-oregon-0.4-ac-migration/script/: wmr_alarm.sh  wmr_create_db_sqlite3.sh
branches/wmr-oregon-0.4-ac-migration/script/cacti/: README.eng
branches/wmr-oregon-0.4-ac-migration/script/controlling/: C2000-CP1.php
branches/wmr-oregon-0.4-ac-migration/script/munin/: munin_plugin.lst  wmr_munin_humidity_1
branches/wmr-oregon-0.4-ac-migration/script/samples/: show_battery_status.sh
branches/wmr-oregon-0.4-ac-migration/script/wmr_alarm_advanced/etc/wmr/script_alarm/: WMR_BATTERY.sh
branches/wmr-oregon-0.4-ac-migration/script/wmr_alarm_advanced/etc/wmr/script_graph/: wmr_graph_Humidity.sh  wmr_graph_Pressure.sh  wmr_graph_Rain.sh  wmr_graph_UV.sh  wmr_graph_Wind.sh
branches/wmr-oregon-0.4-ac-migration/src/: Makefile.am  wmr.c  wmr.h  wmr_alarm.c  wmr_build.h  wmr_conf.c  wmr_ext.h  wmr_file.c  wmr_rrdtool.c  wmr_sensor.c  wmr_sql.c  wmr_syslog.c  wmr_updexec.c  wmr_util.c  wmr_weather.h
branches/wmr-oregon-0.4-ac-migration/src/debug/: shm.c
branches/wmr-oregon-0.4-ac-migration/src/rrdupdate/: rrd_misc.h  rrd_update.c
contrib/: README.ru.txt  wmr-oregon.txt  wmr.conf  wmr.init  wmr.init.openwrt  wmr.sql
linux-pkgs/gentoo/: INSTALL
linux-pkgs/gentoo/distfiles/: wmr-oregon-0.3.tar.bz2
linux-pkgs/gentoo/distfiles/layman/: wmr-oregon-overlay.xml
linux-pkgs/gentoo/overlay/profiles/: info_pkgs  repo_name
rrdupdate/: rrd_generic.h  rrd_update.c  rrd_update.h
script/: wmr_alarm.sh  wmr_create_db_rrd.sh  wmr_create_db_sqlite3.sh  wmr_create_graph.sh  wmr_sendms_sms.ru.sh
script/cacti/: README.ru  wmr_cacti_humidity  wmr_cacti_humidity_X  wmr_cacti_pressure  wmr_cacti_temp  wmr_cacti_temp_0  wmr_cacti_temp_X  wmr_cacti_uv  wmr_cacti_wind
script/munin/: README.eng  wmr_munin_humidity  wmr_munin_temp  wmr_munin_temp_0  wmr_munin_uv  wmr_munin_water  wmr_pressure  wmr_rain  wmr_temp_X
script/samples/: show_rrd_hour_name.sh
script/wmr_alarm_advanced/: wmr_alarm.sh
src/: wmr.c  wmr.h  wmr_alarm.c  wmr_build.h  wmr_conf.c  wmr_ext.h  wmr_rrdtool.c  wmr_sensor.c  wmr_sql.c  wmr_syslog.c  wmr_updexec.h  wmr_util.c  wmr_wmr.h
src/lang/: lang_en.h  lang_ru.h  lang_ru_1251.h  lang_ru_866.h  lang_ru_KOI8.h  lang_ru_UTF8.h
src/rrdupdate/: rrd_generic.c  rrd_update.c
src/snmp/: main.c  snmp.c
tags/wmr-oregon-0.3/: Makefile.openwrt.i386  wmr.c  wmr_build.h  wmr_conf.c  wmr_convert.h  wmr_rrdtool.c  wmr_struct.h  wmr_syslog.c  wmr_version.h
tags/wmr-oregon-0.3/contrib/: README.ru.txt  weather.db.TMPL  wmr-oregon.txt  wmr.init
tags/wmr-oregon-0.3/rrdupdate/: cli.c  rrd_generic.c  rrd_misc.c
tags/wmr-oregon-0.3/script/: wmr_alarm.sh  wmr_logrotate.sh
tags/wmr-oregon-0.3/script/munin/: README.ru  munin_plugin.lst
tags/wmr-oregon-0.3/script/samples/: wmr_create_rrd.sh
tags/wmr-oregon-0.3/udev/: 10-wmr.rules
trunk/: INSTALL  Makefile  Makefile.inc  README.eng.txt  config.h  configure  goftp.sh
trunk/contrib/: README.ru.txt  weather.db  wmr.sql
trunk/script/cacti/: wmr_cacti_all_weather  wmr_cacti_humidity_1  wmr_cacti_rain  wmr_cacti_water
trunk/script/munin/: README.ru  wmr_munin_humidity_X  wmr_munin_wind
trunk/script/samples/: show_current_weather.sh  show_db_weather.sh  show_db_weather_tables.sh  show_rrd_hour_all.sh
trunk/script/update_weather/: pwsweather.sh  pywws.sh
trunk/script/wmr_alarm_advanced/: README
trunk/src/: wmr_build.h  wmr_convert.h  wmr_file.c  wmr_syslog.c  wmr_updexec.c  wmr_version.h
trunk/src/rrdupdate/: rrd_format.h
trunk/src/snmp/: debug.c  oiddb.c  snmp.h
udev/: README
wiki/: Alarm.wiki  C2000CP1controlling4LineRU.wiki  Cacti.wiki  Compile.wiki  Install.wiki  Logrotate.wiki  Munin.wiki  RRDCreateImg.wiki  SQLite.wiki  Use.wiki  WMRAboutRU.wiki  WMRCactiRU.wiki  WMRConfigFile.wiki  WMRMuninRU.wiki  WMRSupportHardware.wiki  WMRUsageRU.wiki  WMRdebugScreenshot.wiki  WhatisWMR.wiki
(+10 files in other folders)
